# altcha-lib-rs

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml  publish.yml
examples/: server.rs
src/: algorithm.rs  error.rs  lib.rs  utils.rs
