[package]
name = "altcha-lib-rs"
version = "0.3.0"
edition = "2021"
authors = ["jmic <jmic@users.noreply.github.com>"]
description = "Community implementation of the Altcha library in Rust for your own server application to create and validate challenges and responses."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jmic/altcha-lib-rs"

[lib]
path = "src/lib.rs"

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["json", "sha1"]

[dependencies]
chrono = "0.4"
rand = "0.9"
sha2 = "0"
base16ct = { version = "1.0", features = ["alloc"] }
sha1 = { version = "0", optional = true }
hmac = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"

[features]
default = []
json = ["dep:serde_json"]
sha1 = ["dep:sha1"]

[dev-dependencies]
actix-web = "4"
base64 = "0.22"
