[package]
name = "altcha-lib"
version = "0.1.0"
edition = "2024"
authors = ["developer@danilo.info", "jmic <jmic@users.noreply.github.com>"]
description = "Community implementation of the Altcha library in Rust for your own server application to create and validate challenges and responses."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dnp1/altcha-lib-rs"

[lib]
path = "src/lib.rs"

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["json"]

[dependencies]

jiff = "0.2.23"
rand = "~0.10"
sha2 = "~0.11"
base16ct = { version = "1.0.0", features = ["alloc"] }
hmac = "~0.13"
serde = { version = "~1.0.228", features = ["derive"] }
serde_json = { version = "~1.0.149", optional = true }
thiserror = "~2.0.18"

[features]
default = []
json = ["dep:serde_json"]

[dev-dependencies]
actix-web = "~4.13.0"
base64 = "0.22"
altcha-lib = {path = ".", features = ["json"]}
